# xanthous

./: .gitignore  Cargo.toml  Config.toml  README.org  default.nix  haskell-overlay.nix  hie.nix  hie.sh  hie.yaml  nixpkgs.nix  package.yaml  pkg.nix  shell.nix  xanthous.cabal  xanthous.nix
.circleci/: config.yml
.github/actions/nix-build/: Dockerfile  entrypoint.sh
.github/workflows/: haskell.yml
app/: Main.hs
bench/: Bench.hs
bench/Bench/: Prelude.hs
bench/Xanthous/: RandomBench.hs
bench/Xanthous/Generators/: UtilBench.hs
docs/: raw-types.org
nix/: nixpkgs.nix  sources.json
proptest-regressions/: description.txt
proptest-regressions/display/: draw_box.txt  viewport.txt
proptest-regressions/types/: entity_map.txt  mod.txt
server/: Cargo.toml  default.nix  docker.nix  module.nix  shell.nix
server/src/: main.rs  metrics.rs  pty.rs
src/: Main.hs  cli.yml  description.rs  game.rs  main.rs  messages.rs  messages.toml  settings.rs
src/Xanthous/: App.hs  Command.hs  Data.hs  Entities.hs  Game.hs  Generators.hs  Messages.hs  Monad.hs  Orphans.hs  Physics.hs  Prelude.hs  Random.hs  Resource.hs  Util.hs  \  keybindings.yaml  messages.yaml
src/Xanthous/AI/: Gormlak.hs  Gormlak.hs-boot
src/Xanthous/App/: Autocommands.hs  Common.hs  Prompt.hs  Time.hs
src/Xanthous/Data/: App.hs  Entities.hs  EntityChar.hs  EntityMap.hs  Levels.hs  Memo.hs  NestedMap.hs  VectorBag.hs
src/Xanthous/Entities/: Arbitrary.hs  Character.hs  Common.hs  Creature.hs  Creature.hs-boot  Entities.hs  Entities.hs-boot  Environment.hs  Item.hs  Marker.hs  RawTypes.hs  Raws.hs  SomeEntity.hs
src/Xanthous/Game/: Arbitrary.hs  Draw.hs  Env.hs  (+4 more)
src/display/: color.rs  draw_box.rs  mod.rs  utils.rs  viewport.rs
src/entities/: character.rs  creature.rs  entity.rs  entity_char.rs  environment.rs  item.rs  mod.rs  raw_types.rs  raws.rs  util.rs
src/level_gen/: cave_automata.rs  display.rs  mod.rs  util.rs
src/types/: collision.rs  command.rs  direction.rs  entity_map.rs  menu.rs  mod.rs
src/util/: mod.rs  promise.rs  static_cfg.rs  static_toml.rs  template.rs  trait_impls.rs
test/: Spec.hs
test/Test/: Prelude.hs
test/Xanthous/: CommandSpec.hs  DataSpec.hs  EntitiesSpec.hs  GameSpec.hs  MessageSpec.hs  OrphansSpec.hs  RandomSpec.hs  UtilSpec.hs
(+54 files in other folders)
