[package]
name = "xanthous"
version = "0.1.0"
authors = ["Griffin Smith <root@gws.fyi>"]
edition = "2018"

[dependencies]
backtrace = "0.3"
clap = {version = "^2.33.0", features = ["yaml"]}
config = "*"
downcast-rs = "^1.0.4"
include_dir = "0.2.1"
itertools = "*"
lazy_static = "*"
log = "*"
log4rs = "*"
maplit = "^1.0.1"
nom = "^5.0.0"
prettytable-rs = "^0.8"
proptest = "0.9.3"
proptest-derive = "*"
rand = {version = "^0.7.0", features = ["small_rng"]}
serde = "^1.0.8"
serde_derive = "^1.0.8"
serde_json = "*"
termion = "*"
toml = "^0.5.1"

[dev-dependencies]
