[package]
name = "xanthous-server"
version = "0.1.0"
edition = "2018"

[dependencies]
clap = { version = "3.0", features = [ "derive", "env" ] }
color-eyre = "0.5.11"
eyre = "0.6.5"
thrussh = "0.33.5"
thrussh-keys = "0.21.0"
tracing = "0.1.29"
tracing-subscriber = "0.2.25"
metrics = "0.17.0"
metrics-exporter-prometheus = "0.6.1"
futures = "0.3.17"
libc = "0.2.103"
nix = "0.23.0"

# Pins for rust 1.55 (2018 edition) until we have 1.56 in nixpkgs-unstable
pbkdf2 = "<0.9"
base64ct = "<1.2"

[dependencies.tokio]
version = "1.13"
features = ["rt", "rt-multi-thread", "macros", "net", "process", "fs", "signal"]

[dev-dependencies]
tempfile = "3.2.0"
